[package]
name = "oberon"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cressida = "0.1.0"
ash="0.37.0"
winit = "0.26.1"
egui = "0.16.1"
vk-shader-macros = "0.2.2"
gpu-allocator = "0.21.0"
ash-window = "0.10.0"
nalgebra = "*"